------------------
Pylint's ChangeLog
------------------
What's New in Pylint 1.8?
=========================

    * `abstract-class-instantiated` is now emitted for all inference paths.

       Close #1673

    * Add set of predefined naming style to ease configuration of checking
      naming conventions.

      Closes #1013

    * Added a new check, ``keyword-arg-before-vararg``

      This is emitted for function definitions
      in which keyword arguments are placed before variable
      positional arguments (*args).

      This may lead to args list getting modified if keyword argument's value
      is not provided in the function call assuming it will take default value
      provided in the definition.
	
    * The `invalid-name` check contains the name of the template that caused the failure

      Close #1176

    * Using the -j flag won't start more child linters than needed.

      Contributed by Roman Ivanov in #1614

    * Fix a false positive with bad-python3-import on relative imports

      Close #1608

    * Added a new Python 3 check, ``non-ascii-bytes-literals``

      Close #1545

    * Added a couple of new Python 3 checks for accessing dict methods in non-iterable context

    * Protocol checks (not-a-mapping, not-an-iterable and co.) aren't emitted on classes with dynamic getattr

    * Added a new warning, 'bad-thread-instantiation'

      This message is emitted when the threading.Thread class does not
      receive the target argument, but receives just one argument, which
      is by default the group parameter.

      Close #1327

    * In non-quiet mode, absolute path of used config file is logged to
      standard error.
      Close #1519

    * Raise meaningful exception for invalid reporter class being selected

      When unknown reporter class will be selected as Pylint reporter,
      meaningful error message would be raised instead of bare ``ImportError``